// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<div
  className="boxed-group-inner display-flex-start width-30 spacer-right spacer-bottom bordered"
>
  <CheckIcon
    className="little-spacer-top spacer-right"
    fill="#00aa00"
  />
  <div
    className="display-flex-column abs-height-100"
  >
    <h4>
      Foo
    </h4>
    <div
      className="spacer-top flex-1"
    >
      Foo bar...
    </div>
    <div
      className="spacer-top"
    >
      <em
        className="text-success"
      >
        settings.almintegration.feature.enabled
      </em>
    </div>
  </div>
</div>
`;

exports[`should render correctly: inactive 1`] = `
<div
  className="boxed-group-inner display-flex-start width-30 spacer-right spacer-bottom bordered bg-muted"
>
  <ClearIcon
    className="little-spacer-top spacer-right"
    fill="#999"
  />
  <div
    className="display-flex-column abs-height-100"
  >
    <h4>
      Foo
    </h4>
    <div
      className="spacer-top flex-1"
    >
      Foo bar...
    </div>
    <div
      className="spacer-top"
    >
      <em
        className="text-muted"
      >
        settings.almintegration.feature.disabled
      </em>
    </div>
  </div>
</div>
`;

exports[`should render correctly: inactive, with reason 1`] = `
<div
  className="boxed-group-inner display-flex-start width-30 spacer-right spacer-bottom bordered bg-muted"
>
  <ClearIcon
    className="little-spacer-top spacer-right"
    fill="#999"
  />
  <div
    className="display-flex-column abs-height-100"
  >
    <h4>
      Foo
    </h4>
    <div
      className="spacer-top flex-1"
    >
      Foo bar...
    </div>
    <div
      className="spacer-top"
    >
      <em
        className="text-muted"
      >
        Bar is foo'd
      </em>
    </div>
  </div>
</div>
`;
